# itf_patterns_rs

./: Cargo.toml  Dioxus.toml  README.md
assets/styling/: main.css
pattern_bingo/: Dioxus.toml
pattern_bingo/assets/styling/: main.css
pattern_bingo/src/components/: bingo.rs
src/: main.rs  utils.rs
src/components/: bingo.rs  grid.rs  mod.rs
