[package]
name = "itf_patterns_rs"
version = "0.0.1"
authors = ["Oscar Aspelin <oscar.aspelin@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.2"}
rand = { version = "0.9.2" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
