[package]
name = "itf_patterns_rs"
version = "0.0.1"
authors = ["Oscar Aspelin <oscar.aspelin@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.9"}
rand = { version = "0.10.0" }
strum = {version = "0.28.0", features = ["strum_macros", "derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
